生成空课表,小组详情
